Add JVMCI adapter (#38)